@@ -4,7 +4,6 @@ import code.with.vanilson.libraryapplication.common.exceptions.ResourceBadReques
 import code.with.vanilson.libraryapplication.common.exceptions.ResourceConflictException;
 import code.with.vanilson.libraryapplication.common.exceptions.ResourceNotFoundException;
 import code.with.vanilson.libraryapplication.common.utils.MessageProvider;
-
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Repository;
@@ -14,11 +13,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.text.MessageFormat;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static code.with.vanilson.libraryapplication.admin.AdminMapper.*;
-import static code.with.vanilson.libraryapplication.admin.AdminMapper.mapToAdminResponse;
-import static code.with.vanilson.libraryapplication.common.utils.MessageProvider.*;
+import static code.with.vanilson.libraryapplication.common.utils.MessageProvider.getMessage;
 
 /**
  * BookService
@@ -30,8 +27,10 @@ import static code.with.vanilson.libraryapplication.common.utils.MessageProvider
 @Repository
 @Slf4j
 @Service
+@SuppressWarnings("unused")
 public class AdminService implements IAdminService {
 
+    public static final String LIBRARY_ADMIN_NOT_FOUND = "library.admin.not_found";
     private final AdminRepository adminRepository;
 
     public AdminService(AdminRepository adminRepository) {
@@ -52,7 +51,7 @@ public class AdminService implements IAdminService {
         return adminRepository.findAll()
                 .stream()
                 .map(AdminMapper::mapToAdminResponse)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
@@ -78,7 +77,7 @@ public class AdminService implements IAdminService {
                 .orElseThrow(() -> {
                     loggerError(adminId);
                     var errorMessage = MessageFormat.format(
-                            getMessage("library.admin.not_found"), adminId);
+                            getMessage(LIBRARY_ADMIN_NOT_FOUND), adminId);
                     return new ResourceNotFoundException(errorMessage);
                 });
 
@@ -105,7 +104,8 @@ public class AdminService implements IAdminService {
 
         // Check if an Admin with the same unique fields already exists
         if (adminRepository.existsAdminByEmail(adminRequest.getEmail())) {
-            var message = MessageFormat.format(MessageProvider.getMessage("library.admin.email_exists"),adminRequest.getEmail());
+            var message = MessageFormat.format(MessageProvider.getMessage("library.admin.email_exists"),
+                    adminRequest.getEmail());
             throw new ResourceConflictException(message);
         }
 
@@ -139,7 +139,7 @@ public class AdminService implements IAdminService {
     @Transactional
     public AdminResponse updateAdmin(AdminRequest adminRequest, Long adminId) {
         var existingAdmin = getAdmin(adminRequest == null, adminRepository.findById(adminId)
-                .orElseThrow(() -> new ResourceNotFoundException("library.admin.not_found")));
+                .orElseThrow(() -> new ResourceNotFoundException(LIBRARY_ADMIN_NOT_FOUND)));
 
         methodAuxiliaryToCreateAdmin(adminRequest, existingAdmin);
 
@@ -179,7 +179,7 @@ public class AdminService implements IAdminService {
         if (admin.isEmpty()) {
             loggerError(adminId);
             var errorMessage = MessageFormat.format(
-                    getMessage("library.admin.not_found"), adminId);
+                    getMessage(LIBRARY_ADMIN_NOT_FOUND), adminId);
             throw new ResourceNotFoundException(errorMessage);
         }
 
@@ -195,7 +195,7 @@ public class AdminService implements IAdminService {
      * @param adminId The unique identifier of the admin that was not found.
      */
     private static void loggerError(Long adminId) {
-        var message = MessageFormat.format(MessageProvider.getMessage("library.admin.not_found"), adminId);
+        var message = MessageFormat.format(MessageProvider.getMessage(LIBRARY_ADMIN_NOT_FOUND), adminId);
         log.error(message);
     }
 
